Fix dark mode on new buttons.

--- a/src/sass/_random.scss
+++ b/src/sass/_random.scss
@@ -3,7 +3,7 @@
   opacity: 0;
   pointer-events: none;
   position: fixed;
-  bottom: 0;
+  bottom: 112px;
   width: 100%;
   margin-bottom: 0.5rem;
   display: flex;
@@ -53,7 +53,7 @@
   100% {opacity: 1;transform: translateY(0) scale(1);}
 }
 
-.night #bigRedButton {
+.night .hudButton {
   background: url('../hex.png');
   background-color: $color-night-background;
   color: $color-night-text;
